<resources>
    <string name="app_name">Scanner</string>
    <string name="welcome_kit">Welcome Kit</string>
    <string name="hall_number">Hall Number</string>
    <string name="hall1">Hall Number 1</string>
    <string name="hall2">Hall Number 2</string>
    <string name="hall3">Hall Number 3</string>
    <string name="hall4">Hall Number 4</string>
    <string name="hall5">Hall Number 5</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="lunch">Lunch</string>
    <string name="bulk_exit">Bulk Exit</string>
</resources>
