<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_hall1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/hall1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_hall2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/hall2"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_hall3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/hall3"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_hall4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/hall4"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_hall5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/hall5"
        android:textSize="18sp" />
</LinearLayout>
