<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_lunch_day1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/day1"
        android:textSize="27sp" />

    <Button
        android:id="@+id/btn_lunch_day2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/day2"
        android:textSize="27sp" />

    <Button
        android:id="@+id/btn_lunch_day3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/day3"
        android:textSize="27sp" />
</LinearLayout>
