<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_welcome_kit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/welcome_kit"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_hall_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/hall_number"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_lunch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/lunch"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>